--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my_portforlio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://nhviet03.github.io/NHViet03_portfolio/",
+  "homepage": "https://nhviet03.github.io/portfolio/",
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
     "@react-pdf-viewer/core": "^3.12.0",
